# icinga_passive_checks

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
src/: checks.rs  config.rs  control.rs  main.rs  pings.rs  systemd.rs  update.rs
