[package]
name = "icinga_passive_checks"
version = "0.1.4"
edition = "2021"

[dependencies]
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
toml = "0.8.19"
clap = { version = "4.4", features = ["derive"] }
